Обновления классов и директории admin из более новой версии metabo